--- a/src/components/SocialMediaLinks.astro
+++ b/src/components/SocialMediaLinks.astro
@@ -9,7 +9,6 @@ const socialLinks: Array<{
 	name: string;
 	friendlyName: string;
 	link: string;
-	isWebmention?: boolean;
 }> = [
 	{
 		name: "mdi:github",
@@ -25,7 +24,6 @@ const socialLinks: Array<{
 		name: "mdi:email",
 		friendlyName: "email",
 		link: "mailto:ndangamy@gmail.com",
-		isWebmention: true,
 	},
 ];
 ---
@@ -33,13 +31,13 @@ const socialLinks: Array<{
 <div class="flex flex-wrap items-end gap-x-4">
 	<ul class="flex flex-1 items-center gap-x-2 sm:flex-initial">
 		{
-			socialLinks.map(({ link, name, friendlyName, isWebmention }) => (
+			socialLinks.map(({ link, name, friendlyName}) => (
 				<li class="flex">
 					<a
-						class="inline-block p-1 sm:hover:text-link"
+						class="inline-block p-1 sm:hover:text-accent"
 						href={link}
 						target="_blank"
-						rel={`noopener noreferrer ${isWebmention ? "me authn" : ""}`}
+						rel={`noopener noreferrer`}
 					>
 						<Icon class="h-6 w-6" name={name} aria-hidden="true" focusable="false" />
 						<span class="sr-only">{friendlyName}</span>
