--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -10,7 +10,7 @@ export const getStaticPaths = (async ({ paginate }) => {
 	const allPosts = await getAllPosts();
 	const allPostsByDate = sortMDByDate(allPosts);
 	const tags = getUniqueTags(allPosts);
-	return paginate(allPostsByDate, { props: { tags }, pageSize: 10 });
+	return paginate(allPostsByDate, { props: { tags }, pageSize: 2 });
 }) satisfies GetStaticPaths;
 
 interface Props {
@@ -42,25 +42,16 @@ const paginationProps = {
 ---
 
 <BaseLayout meta={meta}>
-	<section class="flex gap-4 cody-bg">
-		<div>
-			<h1 class="title">Posts</h1>
-			<ul class="flex flex-col gap-4">
-				{
-					page.data.map(post => (
-						<PostPreview post={post}/>
-					))
-				}
-				<!--
-				{
-					posts.map((post) => (
-						<PostPreview post={post}/>
-					))
-				}
-				-->
-			</ul>
-			<Pagination {...paginationProps} />
-		</div>
+	<section class="cody-bg">
+		<h1 class="title">Posts</h1>
+		<ul class="flex flex-col gap-4">
+			{
+			page.data.map(post => (
+				<PostPreview post={post}/>
+			))
+			}
+		</ul>
+		<Pagination {...paginationProps} />
 	</section>
 	{
 		!!tags.length && (
