--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,7 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
-import { AUTHOR, SITE_TITLE, SITE_DESCRIPTION } from '../consts.ts';
+import { siteConfig } from '../consts.ts';
 
 interface Props {
 	title: string;
@@ -34,7 +34,7 @@ const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = A
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta name="author" content={AUTHOR} />
+<meta name="author" content={siteConfig.author} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
@@ -45,7 +45,7 @@ const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = A
 {
 	articleDate && (
 		<>
-			<meta property="article:author" content={AUTHOR} />
+			<meta property="article:author" content={siteConfig.author} />
 			<meta property="article:published_time" content={articleDate} />
 		</>
 	)
