--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { NAV_LINKS, AUTHOR } from '../consts.ts';
+import { NAV_LINKS, siteConfig } from '../consts.ts';
 const today = new Date();
 
 const year = new Date().getFullYear();
@@ -11,7 +11,7 @@ const year = new Date().getFullYear();
 >
 	<div class="me-0 sm:me-4">
 		Copyright &copy; {year}{" "}
-		{AUTHOR}
+		{siteConfig.author}
 	</div>
 	<nav
 		aria-label="More on this site"
