--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -2,7 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts.ts";
+import { siteConfig } from "../consts.ts";
 
 interface Props {
 		title?: string;
@@ -10,7 +10,7 @@ interface Props {
 		image?: string;
 }
 
-const { title = SITE_TITLE, description = SITE_DESCRIPTION, image } = Astro.props;
+const { title = siteConfig.title, description = siteConfig.description, image } = Astro.props;
 
 ---
 <!doctype html>
