refactor and add description

--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -61,7 +61,7 @@ const paginationProps = {
 	<ul class="flex flex-col gap-4">
 		{
 		page.data.map(post => (
-			<PostPreview post={post}/>
+			<PostPreview post={post} withDesc/>
 		))
 		}
 	</ul>
