fix missing author

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const year = new Date().getFullYear();
 >
 	<div class="me-0 sm:me-4">
 		Copyright &copy; {year}{" "}
-		{siteConfig.author}
+		{siteConfig.profile.author}
 	</div>
 	<nav
 		aria-label="More on this site"
