--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,7 +34,7 @@ const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = A
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta name="author" content={siteConfig.author} />
+<meta name="author" content={siteConfig.profile.author} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
@@ -45,7 +45,7 @@ const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = A
 {
 	articleDate && (
 		<>
-			<meta property="article:author" content={siteConfig.author} />
+			<meta property="article:author" content={siteConfig.profile.author} />
 			<meta property="article:published_time" content={articleDate} />
 		</>
 	)
