--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -74,7 +74,8 @@ const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 	</article>
 	<aside slot="sidebar">
 		<div class="flex flex-col space-y-2">
-			<h2 class="font-semibold text-lg text-textColor">{siteConfig.author}</h2>
+			<h2 class="font-semibold text-lg text-textColor">{siteConfig.profile.author}</h2>
+			{siteConfig.profile.description && (<p>{siteConfig.profile.description}</p>)}
 			<SocialMediaLinks/>
 			<span class="!my-4 text-accent" aria-hidden>---</span>
 			<p>
