--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,88 @@
 ---
-import BaseLayout from '../layouts/Base.astro';
 import { siteConfig } from '../consts';
+import BaseLayout from '../layouts/Base.astro';
+import PostPreview from "@/components/blog/PostPreviewB";
+import SocialMediaLinks from "@/components/SocialMediaLinks";
+import { getAllPosts, sortMDByDate } from "@/utils";
+
+const MAX_POSTS = 10;
+const allPosts = await getAllPosts();
+const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+
+const tech: Array<{ title: string; desc: string; href: string }> = [
+	{
+		title: "Astro",
+		desc: "Build fast websites, faster.",
+		href: "https://astro.build",
+	},
+	{
+		title: "Astro Assets",
+		desc: "Built-in optimized asset support.",
+		href: "https://docs.astro.build/en/guides/assets/",
+	},
+	{
+		title: "Tailwind CSS",
+		desc: "Rapidly build modern websites without ever leaving your HTML.",
+		href: "https://tailwindcss.com",
+	},
+	{
+		title: "Markdown",
+		desc: "Simple and easy-to-use markup language.",
+		href: "https://www.markdownguide.org/",
+	},
+	{
+		title: "MDX",
+		desc: "Markdown for the component era.",
+		href: "https://mdxjs.com/",
+	},
+	{
+		title: "Astro Icon",
+		desc: "An easy to use Icon component for Astro.",
+		href: "https://github.com/natemoo-re/astro-icon#readme",
+	},
+];
+
 ---
 
 <BaseLayout title={`${siteConfig.title} | Home`}>
-	<h1>🧑‍🚀 Hello, Astronaut!</h1>
-	<p>
-			Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-			template serves as a lightweight, minimally-styled starting point for anyone looking to
-			build a personal website, blog, or portfolio with Astro.
+	<section class="space-y-4 sm:space-y-8">
+		<h1 class="title">Hello World</h1>
+		<p>
+			Hey guys! This a theme for Astro. You can use this to as personal blog
+			or portfolio. If you want to know more about how you can customise and make it your
+			own, click on the github icon link below, and it will take you to the repo.
 		</p>
-	<p>
-			This template comes with a few integrations already configured in your
-			<code>astro.config.mjs</code> file. You can customize your setup with
-			<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like
-			Tailwind, React, or Vue to your project.
-		</p>
-	<p>Here are a few ideas on how to get started with the template:</p>
-		<ul>
-		<li>Edit this page in <code>src/pages/index.astro</code></li>
-		<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-		<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-		<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-		<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+		<div>
+			<span>You can find me on: </span>
+			<SocialMediaLinks/>
+		</div>
+	</section>
+
+	<section class="mt-8 sm:mt-16">
+		<h2 class="title">Posts</h2>
+		<ul class="space-y-4 sm:space-y-2">
+			{allPostsByDate.map(p => <PostPreview post={p}/>)}
 		</ul>
-	<p>
-			Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-				>read the docs
-			</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-		</p>
-	<p>
-			Looking for a blog template with a bit more personality? Check out <a
-				href="https://github.com/Charca/astro-blog-template"
-				>astro-blog-template
-			</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-	</p>
+	</section>
+
+	<section class="mt-16">
+			<h2 class="title mb-4 text-xl">Technologies</h2>
+			<ul class="space-y-4 sm:space-y-2">
+				{
+					tech.map(({ href, title, desc }) => (
+						<li>
+							<a
+								href={href}
+								target="_blank"
+								rel="noopener noreferrer"
+								class="cody-link inline-block"
+							>
+								{title}
+							</a>: 
+							<p class="inline-block sm:mt-2">{desc}</p>
+						</li>
+					))
+				}
+			</ul>
+		</section>
 </BaseLayout>
