--- a/src/components/blog/PostPreviewB.astro
+++ b/src/components/blog/PostPreviewB.astro
@@ -14,7 +14,7 @@ const postDate = post.data.updatedDate ?? post.data.pubDate;
 
 <li>
 	<div class="flex flex-col gap-x-0 sm:flex-row sm:divide-x sm:divide-accent">
-		<FormattedDate date={postDate} class="min-w-[120px] text-gray-600 dark:text-gray-400" />
+		<FormattedDate date={postDate} class="min-w-[120px] text-gray-600 dark:text-gray-400" pubDate />
 		<span class="sm:before:ml-4">
 			<a href={`/blog/${post.slug}/`} class="cody-link" data-astro-prefetch>
 				{post.data.title}
