--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -49,14 +49,14 @@ const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 				<span>
 					/ {minutesRead}
 				</span>
-			</span>
 			{
 				updatedDate && (
-					<div class="mb-2 italic">
-						Last updated on <FormattedDate date={updatedDate} dateTimeOptions={dateTimeOptions} />
+					<div class="mb-2 italic px-2 bg-accent-2 rounded w-fit inline text-sm">
+						Last updated: <FormattedDate date={updatedDate} dateTimeOptions={dateTimeOptions} />
 					</div>
 				)
 			}
+			</span>
 			{tags && (
 				<ul class="not-prose flex gap-2 flex-wrap">
 					{tags.map(tag => (
