--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,9 +45,9 @@ const tech: Array<{ title: string; desc: string; href: string }> = [
 ---
 
 <BaseLayout title={`${siteConfig.title} | Home`}>
-	<section class="space-y-4 sm:space-y-8">
+	<section>
 		<h1 class="title">Hello World</h1>
-		<p>
+		<p class="mb-4 sm:mb-8">
 			Hey guys! This a theme for Astro. You can use this to as personal blog
 			or portfolio. If you want to know more about how you can customise and make it your
 			own, click on the github icon link below, and it will take you to the repo.
@@ -66,7 +66,7 @@ const tech: Array<{ title: string; desc: string; href: string }> = [
 	</section>
 
 	<section class="mt-16">
-			<h2 class="title mb-4 text-xl">Technologies</h2>
+			<h2 class="title">Technologies</h2>
 			<ul class="space-y-4 sm:space-y-2">
 				{
 					tech.map(({ href, title, desc }) => (
