--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -52,6 +52,7 @@ const { frontmatter, headings } = Astro.props;
 
 	</section>
 	<aside name="sidebar">
+		<div class="flex flex-col space-y-2">
 			<h2 class="font-semibold text-lg text-textColor" rel="author">{siteConfig.profile.author}</h2>
 			{siteConfig.profile.description && (<p>{siteConfig.profile.description}</p>)}
 			<SocialMediaLinks/>
