add horizontal spacing between nav links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const url = new URL(Astro.request.url);
 		id="navigation-menu" 
 		aria-label="main menu"
 		>
-		<div class="space-y-1 px-2 pb-3 pt-2 sm:flex sm:px-0 sm:py-0 sm:space-y-0">
+		<div class="space-y-1 px-2 pb-3 pt-2 sm:flex sm:px-0 sm:py-0 sm:space-y-0 sm:space-x-2">
 			{NAV_LINKS.map(nav => (
 				<HeaderLink 
 					class="block py-2 sm:py-0" 
