fix overflowing content

--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -20,7 +20,7 @@ const { title = siteConfig.title, description = siteConfig.description, image } 
 	</head>
 	<body>
 		<Header/>
-		<main class="grid gap-y-16 sm:grid-cols-[3fr_1fr] sm:gap-x-8">
+		<main class="grid grid-cols-1 gap-y-16 sm:grid-cols-[3fr_1fr] sm:gap-x-8">
 			<slot/>
 			<slot name="sidebar"/>
 		</main>
