add tags link for mobile nav menu

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,6 +30,13 @@ const url = new URL(Astro.request.url);
 					data-astro-prefetch
 				>{nav.title}</HeaderLink>
 			))}
+				<HeaderLink 
+					class="sm:hidden block py-2 sm:py-0" 
+					href="/tags"
+					title="tags"
+					aria-current={url.pathname === "tags" ? "page" : false}
+					data-astro-prefetch
+				>Tags</HeaderLink>
 		</div>
 	</nav>
 
