--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,12 @@ import { siteConfig } from '../consts';
 import BaseLayout from '../layouts/Base.astro';
 import PostPreview from "@/components/blog/PostPreviewB";
 import SocialMediaLinks from "@/components/SocialMediaLinks";
-import { getAllPosts, sortMDByDate } from "@/utils";
+import { getAllPosts, sortMDByDate, sortMDByPinned } from "@/utils";
 
 const MAX_POSTS = 10;
 const allPosts = await getAllPosts();
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+const allPostsByPinned = sortMDByPinned(allPostsByDate);
 
 const tech: Array<{ title: string; desc: string; href: string }> = [
 	{
@@ -61,7 +62,7 @@ const tech: Array<{ title: string; desc: string; href: string }> = [
 	<section class="mt-8 sm:mt-16">
 		<h2 class="title">Posts</h2>
 		<ul class="space-y-4 sm:space-y-2">
-			{allPostsByDate.map(p => <PostPreview post={p}/>)}
+			{allPostsByPinned.map(p => <PostPreview post={p}/>)}
 		</ul>
 	</section>
 
