--- a/src/components/blog/PostPreviewA.astro
+++ b/src/components/blog/PostPreviewA.astro
@@ -2,6 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import type { HTMLTag, Polymorphic } from "astro/types";
 import FormattedDate from "@/components/FormattedDate";
+import { Icon } from "astro-icon";
 
 type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 	post: CollectionEntry<"post">;
@@ -10,12 +11,23 @@ type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 
 const { post, as: Tag = "div", withDesc = false } = Astro.props;
 const postDate = post.data.updatedDate ?? post.data.publishDate;
+const pinned: boolean = !!post.data.order;
 ---
 
 <li>
-	<a href={`/blog/${post.slug}/`} class="post-item">
-		<h4 class="cody-link inline font-bold" >{post.data.title}</h4>
-	</a>
+	<span>
+		<a href={`/blog/${post.slug}/`} class="post-item">
+			<h4 class="cody-link inline font-bold" >{post.data.title}</h4>
+		</a>
+		{ pinned &&
+			<Icon 
+				class="h-5 w-5 inline text-accent rotate-45 -ml-1" 
+				name="mdi:pin" 
+				aria-hidden="true" 
+				focusable="false"
+			/>
+		}
+	</span>
 	<p class="date pr-2 mt-1">
 		<FormattedDate date={post.data.pubDate} pubDate/>
 	</p>
