wrap links when it's too crowded

--- a/src/components/SocialMediaLinks.astro
+++ b/src/components/SocialMediaLinks.astro
@@ -5,7 +5,7 @@ import { socialLinks } from "../consts.ts";
 ---
 
 <div class="flex flex-wrap items-end gap-x-4">
-	<ul class="flex flex-1 items-center gap-x-2 sm:flex-initial">
+	<ul class="flex flex-wrap flex-1 items-center gap-x-2 sm:flex-initial">
 		{
 			socialLinks.map(({ link, icon, friendlyName}) => (
 				<li class="flex">
