--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,54 +9,47 @@ import Layout from '../layouts/Base.astro';
 >
 	<h1 class="title">About</h1>
 	<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-			labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-			viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-			adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-			et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-			vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-			sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
-		</p>
+		Hi, I'm a Astro theme. I'm particularly great for starting a blog or a 
+		portfolio. 
+		<div>
+			I was based on two other themes:
+			<a 
+				class="cody-link" 
+				href="https://astro-theme-cactus.netlify.app"
+				target="_blank"
+				rel="noopener noreferrer"
+			>Astro Cactus</a>
+			and
+			<a 
+				class="cody-link" 
+				target="_blank"
+				rel="noopener noreferrer"
+				href="https://risotto.joeroe.io"
+			>Risotto</a>.
+		</div>
+	</p>
 
-	<p>
-			Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-			tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-			blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-			porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-			massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-			Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-			bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-			massa massa ultricies mi.
-		</p>
-
-	<p>
-			Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-			suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-			nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-			turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-			dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-			semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-			vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-			facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-			vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-			urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-		</p>
-
-	<p>
-			Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-			viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-			scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-			gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-			pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-			blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-			cursus metus aliquam eleifend mi.
-		</p>
-
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
+	<h2 class="title mt-4">Here are my built-in features:</h2>
+	<ul class="list-inside list-disc">
+		<li>Looks great on any device</li>
+		<li>Fully Responsive</li>
+		<li>Comes light and dark mode</li>
+		<li>Easy to customize and add content</li>
+		<li>Built with tailwindcss</li>
+		<li>Pin posts and projects</li>
+	</ul>
+	<p class="mt-4">
+		Clone or fork my 
+		<a
+			class="cody-link inline-block"
+			href="https://github.com/kirontoo/astro-theme-cody"
+			target="_blank"
+			rel="noopener noreferrer"
+			aria-label="github repository"
+		>
+			repo
+		</a>
+		if you like me!
 	</p>
 </Layout>
+
