--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -3,7 +3,7 @@ import type { Page, GetStaticPaths } from "astro";
 import type { CollectionEntry } from "astro:content";
 import BaseLayout from "@/layouts/Base";
 import FormattedDate from '@/components/FormattedDate';
-import { getAllPosts, getUniqueTags, sortMDByDate } from "@/utils";
+import { getAllPosts, getUniqueTags, sortMDByDate, getPostsByTag } from "@/utils";
 import PostPreview from '@/components/blog/PostPreviewA';
 // Alternative post item
 // import PostPreview from '@/components/blog/PostPreviewB';
@@ -16,8 +16,8 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const uniqueTags = getUniqueTags(allPostsByDate);
 
 	return uniqueTags.flatMap((tag) => {
-		const filterPosts = allPostsByDate.filter((post) => post.data.tags.includes(tag));
-		return paginate(filterPosts, {
+		const filteredPosts = getPostsByTag(tag, allPostsByDate);
+		return paginate(filteredPosts, {
 			params: { tag },
 			pageSize: 10,
 		});
