change accent color of "#"

--- a/src/components/TableOfContentsHeading.astro
+++ b/src/components/TableOfContentsHeading.astro
@@ -21,7 +21,7 @@ const { heading } = Astro.props;
 <style>
   li:before {
     content: "#";
-    @apply -mr-2 text-accent-2;
+    @apply -mr-2 text-accent;
   }
 
   .active-toc {
