update dev icons

--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -32,7 +32,7 @@ const { frontmatter, headings } = Astro.props;
 							<li>
 								<Icon 
 									class="h-6 w-6 text-textColor" 
-									name={`logos:${s.toLowerCase()}`} 
+									name={`vscode-icons:file-type-${s.toLowerCase()}`} 
 									focusable="false"
 								title={s}
 								/>
